# 18-Mini_Project/Postaway_II/src/features/comments/comments.router.js
@@ -16,7 +16,7 @@ commentRouter.get("/getComment/:commentId", (req, res, next) => {
   commentController.getOneComment(req, res, next);
 });
 
-commentRouter.put("/updateComment/:commentId", (req, res, next) => {
+commentRouter.put("/updateComment", (req, res, next) => {
   commentController.updateComment(req, res, next);
 });
 
